# GraphQL-Explorer

./: CLAUDE.md  README.md  package-lock.json  package.json  replit.md  vite.config.ts
client/src/: App.tsx  index.css
client/src/components/: monaco-editor.tsx
client/src/lib/: graphql-client.ts
client/src/pages/: graphql-client.tsx
server/: index.ts  routes.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: .gitkeep  icon.icns
src-tauri/src/: lib.rs  main.rs
